Added end to end service for Schema Management

--- a/server/src/DbFake.Executor.API/DbFake.Executor.API.csproj
+++ b/server/src/DbFake.Executor.API/DbFake.Executor.API.csproj
@@ -4,5 +4,25 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Google.Protobuf" Version="3.11.3" />
+      <PackageReference Include="Grpc.Net.Client" Version="2.27.0" />
+      <PackageReference Include="Grpc.Tools" Version="2.27.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Protos\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Protobuf Include="..\DbFake.SchemaReader.API\Protos\schema.proto" GrpcServices="Client">
+        <Link>Protos\schema.proto</Link>
+      </Protobuf>
+    </ItemGroup>
+
 
 </Project>
