--- a/server/src/DbFake.Executor.API/appsettings.json
+++ b/server/src/DbFake.Executor.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "Clients": {
+    "SchemaReaderApiUrl":  "https://localhost:5001"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
