--- a/server/src/DbFake.SchemaReader.API/DbFake.SchemaReader.API.csproj
+++ b/server/src/DbFake.SchemaReader.API/DbFake.SchemaReader.API.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
         <PackageReference Include="Dapper.FluentMap" Version="1.8.0" />
+        <PackageReference Include="Google.Protobuf" Version="3.11.3" />
         <PackageReference Include="Grpc.AspNetCore" Version="2.24.0" />
     </ItemGroup>
 
